# smash-minecraft-skins

./: Cargo.toml  LICENSE  README.md  aarch64-skyline-switch.json  link.ld
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml  rust_build.yml
src/: color_correct.rs  keyboard.rs  lib.rs  minecraft_api.rs  modern_skin.rs  skin_files.rs  skin_menu.rs  stock_generation.rs
src/popup/: getskin.js  index.html  style.css
ultimate/mods/minecraft_2_layer/: info.toml
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c00/: def_pickel_001_col.nutexb  model.numdlb  model.numshb  model.numshexb  model.xmb
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c01/: def_pickel_001_col.nutexb  model.numdlb  model.numshb  model.numshexb
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c02/: dark_model.numatb  def_pickel_001_col.nutexb  light_model.numatb  model.numatb  model.numdlb
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c03/: def_pickel_001_col.nutexb
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c04/: def_pickel_001_col.nutexb
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c05/: def_pickel_001_col.nutexb  metamon_model.numatb  model.numshb  model.xmb
ultimate/mods/minecraft_2_layer/fighter/pickel/model/body/c06/: model.numatb  (+2 more)
ultimate/mods/minecraft_2_layer/ui/replace_patch/chara/chara_3/: chara_3_pickel_00.bntx  chara_3_pickel_01.bntx  chara_3_pickel_02.bntx  chara_3_pickel_03.bntx  chara_3_pickel_04.bntx  chara_3_pickel_05.bntx  chara_3_pickel_06.bntx  chara_3_pickel_07.bntx
(+1 files in other folders)
