[package]
name = "minecraft_skins"
version = "1.1.5"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
ramhorns = "0.10.0"
lazy_static = "1.4.0"
minreq = { version = "2.2.1", features = ["https", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1"
parking_lot = "0.11.0"

arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api", branch = "main" }

nutexb = { git = "https://github.com/jam1garner/nutexb" }
bntx = { git = "https://github.com/jam1garner/bntx", branch = "main" }
image = "0.23.10"
percent-encoding = "2.1.0"
color-thief = "0.2.1"
ordered-float = "2.0.0"

minecraft_render = { path = "../smash_minecraft_renders" }

[patch.crates-io]
ring = { git = "https://github.com/skyline-rs/ring" }
webpki = { git = "https://github.com/skyline-rs/webpki" }
getrandom = { git = "https://github.com/skyline-rs/getrandom", branch = "0.1" }
getrandom2 = { git = "https://github.com/skyline-rs/getrandom", branch = "master", package = "getrandom" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
